--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint . --ext .ts,.js",
-    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "lint": "eslint . --ext .ts,.js,.jsx",
+    "lint:fix": "eslint . --ext .ts,.js,.jsx --fix",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
