--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "framer-motion": "^4.0.3",
+    "observable-hooks": "^4.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "rxjs": "^6.6.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
