--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stopwatch",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://buiiz.github.io/stopwatch/",
   "dependencies": {
     "@chakra-ui/react": "^1.4.1",
     "@emotion/react": "^11.1.5",
@@ -19,6 +20,8 @@
     "build": "react-scripts build",
     "lint": "eslint . --ext .ts,.js,.jsx",
     "lint:fix": "eslint . --ext .ts,.js,.jsx --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,6 +52,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   }
 }
